fix ee container setup