@@ -43,7 +43,7 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <configuration>
-                        <argLine>-Xms128m -Xmx1024m -XX:MaxPermSize=256m</argLine>
+                        <argLine>-Xms128m -Xmx1024m</argLine>
                     </configuration>
                 </plugin>
             </plugins>
